--- a/source/Otc.ProjectModel.Infra.Adapter/Otc.ProjectModel.Infra.Adapter.csproj
+++ b/source/Otc.ProjectModel.Infra.Adapter/Otc.ProjectModel.Infra.Adapter.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Otc.ProjectModel.Core.Domain\Otc.ProjectModel.Core.Domain.csproj" />
   </ItemGroup>
 
