implementação de repositorio e rafactoring de classes

--- a/source/Otc.ProjectModel.Core.Domain/Otc.ProjectModel.Core.Domain.csproj
+++ b/source/Otc.ProjectModel.Core.Domain/Otc.ProjectModel.Core.Domain.csproj
@@ -6,6 +6,16 @@
     <Company>Olé Consignado</Company>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard2.0\Otc.ProjectModel.Core.Domain.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard2.0\Otc.ProjectModel.Core.Domain.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Otc.ComponentModel.Annotations" Version="1.0.1" />
     <PackageReference Include="Otc.DomainBase.Exceptions" Version="1.0.2" />
