--- a/source/Otc.ProjectModel.WebApi/appsettings.json
+++ b/source/Otc.ProjectModel.WebApi/appsettings.json
@@ -4,5 +4,7 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailFrom": "teste@teste.com",
+  "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OtcProjectModelDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 }
