--- a/source/Otc.ProjectModel.WebApi/appsettings.json
+++ b/source/Otc.ProjectModel.WebApi/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Ole": "Debug",
+        "Otc": "Debug",
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
     }
   },
+  "RequestTrackerEnabled": true,
   "AllowedHosts": "*",
   "EmailFrom": "teste@teste.com",
   "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OtcProjectModelDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
