--- a/source/Otc.ProjectModel.Core.Application/Otc.ProjectModel.Core.Application.csproj
+++ b/source/Otc.ProjectModel.Core.Application/Otc.ProjectModel.Core.Application.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <DebugType>Full</DebugType>
     <Authors>Equipe Arquitetura</Authors>
     <Company>Olé Consigando</Company>
   </PropertyGroup>
