--- a/source/Otc.ProjectModel.WebApi/appsettings.json
+++ b/source/Otc.ProjectModel.WebApi/appsettings.json
@@ -13,5 +13,9 @@
   "RequestTrackerEnabled": true,
   "AllowedHosts": "*",
   "EmailFrom": "teste@teste.com",
+  "Smtp": "smtp.gmail.com",
+  "Port": "587",
+  "EnableSsl": true,
+  "Password": "", //Base64 Encode
   "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OtcProjectModelDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 }
