--- a/source/Otc.ProjectModel.WebApi/appsettings.json
+++ b/source/Otc.ProjectModel.WebApi/appsettings.json
@@ -14,8 +14,9 @@
   "AllowedHosts": "*",
   "EmailFrom": "teste@teste.com",
   "Smtp": "smtp.gmail.com",
-  "Port": "587",
+  "Port": 587,
   "EnableSsl": true,
-  "Password": "", //Base64 Encode
-  "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OtcProjectModelDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  "Password": "THVjaWFubwo=", //Base64 Encode
+  "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OtcProjectModelDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "NotificationUrl": "www.mycompany.com.br"
 }
