--- a/source/Otc.ProjectModel.WebApi/Otc.ProjectModel.WebApi.csproj
+++ b/source/Otc.ProjectModel.WebApi/Otc.ProjectModel.WebApi.csproj
@@ -1,4 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+  <PropertyGroup>
+    <!-- Modify these constants to enable/disable a feature to debug the template. Note that this only affects the C#. -->
+    <DefineConstants>$(DefineConstants);EmailAdapter;</DefineConstants>
+  </PropertyGroup>
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
