--- a/source/Otc.ProjectModel.Core.Application/Otc.ProjectModel.Core.Application.csproj
+++ b/source/Otc.ProjectModel.Core.Application/Otc.ProjectModel.Core.Application.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.0" />
     <PackageReference Include="Otc.Validations.Helpers" Version="1.0.1" />
   </ItemGroup>
 
