Ajustes referencias para bilbliotecas nuget publicadas no NuGet.org (geradas a partir do github + travis)

--- a/source/Otc.ProjectModel.Core.Application/Otc.ProjectModel.Core.Application.csproj
+++ b/source/Otc.ProjectModel.Core.Application/Otc.ProjectModel.Core.Application.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.0" />
-    <PackageReference Include="Otc.Validations.Helpers" Version="1.0.1" />
+    <PackageReference Include="Otc.Validations.Helpers" Version="1.0.0-v100-alpha1-build2" />
   </ItemGroup>
 
   <ItemGroup>
