--- a/Source/Opala.WebApi/appsettings.json
+++ b/Source/Opala.WebApi/appsettings.json
@@ -10,6 +10,15 @@
       }
     }
   },
+  "JwtConfiguration": {
+    "Audience": "Otc.Opala",
+    "Issuer": "ole consignado",
+    "SecretKey": "gaega4rg6a4rg65ae4g65e"
+  },
+  "DistributedCacheConfiguration": {
+    "CacheStorageType": "Memory"
+  },
+
   "RequestTrackerEnabled": true,
   "AllowedHosts": "*",
   "EmailFrom": "teste@teste.com",
@@ -18,5 +27,5 @@
   "EnableSsl": true,
   "Password": "THVjaWFubwo=", //Base64 Encode
   "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OtcProjectModelDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-  "NotificationUrl": "www.mycompany.com.br"
+  "NotificationUrl": "http://www.mycompany.com.br/"
 }
