--- a/Source/Opala.Core.Application/Opala.Core.Application.csproj
+++ b/Source/Opala.Core.Application/Opala.Core.Application.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.0" />
-    <PackageReference Include="Otc.Validations.Helpers" Version="1.0.0-v100-alpha1-build2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Otc.Validations.Helpers" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
