--- a/Source/Opala.Infra.NotificationAdapter/Opala.Infra.NotificationAdapter.csproj
+++ b/Source/Opala.Infra.NotificationAdapter/Opala.Infra.NotificationAdapter.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Otc.Networking.Http.Client.Abstractions" Version="1.0.0" />
+    <PackageReference Include="Refit" Version="4.6.30" />
   </ItemGroup>
 
   <ItemGroup>
