--- a/Source/Opala.Web/appsettings.json
+++ b/Source/Opala.Web/appsettings.json
@@ -4,5 +4,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailFrom": "teste@teste.com",
+  "Smtp": "smtp.gmail.com",
+  "Port": 587,
+  "EnableSsl": true,
+  "Password": "THVjaWFubwo=", //Base64 Encode
+  "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OtcProjectModelDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "NotificationUrl": "http://www.mycompany.com.br/"
 }
